state of originating in a box

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -46,7 +46,13 @@
     color: black;
 }
 
-
 .state-legend-green {
     background-color: green !important;
 }
+
+.state-legend-grey {
+    color: black;
+    background-color: #DCDCDC !important;
+    float: right;
+}
+
